@@ -44,6 +44,7 @@ import java.io.File
   * @param params optional step parameters
   * @param callerParams optional caller parameters
   * @param tags list of optional tags/annotations
+  * @param message: optional overriding error message
   */
 case class Step(
     sourceRef: Option[SourceRef],
@@ -56,7 +57,8 @@ case class Step(
     override val evalStatus: EvalStatus,
     override val params: List[(String, String)],
     override val callerParams: List[(String, String)],
-    tags: List[Tag]) extends GherkinNode {
+    tags: List[Tag],
+    message: Option[String]) extends GherkinNode {
 
   override val nodeType: NodeType = NodeType.Step
 
@@ -121,8 +123,9 @@ case class Step(
       withEvalStatus: EvalStatus = evalStatus,
       withParams: List[(String, String)] = params,
       withCallerParams: List[(String, String)] = callerParams,
-      withTags: List[Tag]): Step = {
-    Step(withSourceRef, withKeyword, withName, withAttachments, withStepDef, withTable, withDocString, withEvalStatus, withParams, withCallerParams, withTags)
+      withTags: List[Tag] = tags,
+      withMessage: Option[String] = message): Step = {
+    Step(withSourceRef, withKeyword, withName, withAttachments, withStepDef, withTable, withDocString, withEvalStatus, withParams, withCallerParams, withTags, withMessage)
   }
 
   /**
@@ -231,10 +234,16 @@ object Step {
     val docString = Option(step.getDocString()).filter(_.getContent().trim.length > 0) map { ds =>
       (Long2long(ds.getLocation.getLine), ds.getContent, Option(ds.getMediaType).filter(_.trim.length > 0))
     }
-    val (name, tagList): (String, List[Tag]) = step.getText.trim match {
-      case r"""(?i)((?:@\w+\s+)+)$ts(.*)$name""" => 
-        (name, ts.split("\\s+").toList.map(n => Tag(n.trim)))
-      case _ => (step.getText, Nil)
+    val (name, tagList, message): (String, List[Tag], Option[String]) = {
+      val (n, t) = step.getText.trim match {
+        case r"""(?i)((?:@\w+\s+)+)$ts(.*)$name""" => 
+          (name, ts.split("\\s+").toList.map(n => Tag(n.trim)))
+        case _ => (step.getText, Nil)
+      }
+      n match {
+        case r"""(.+ should .+)$s: "(.+)$m"""" if !m.contains('"') => (s, t, Some(s"${Formatting.ZeroChar}$m${Formatting.ZeroChar}"))
+        case _ => (n, t, None)
+      }
     }
     Step(
       Option(step.getLocation).map(loc => SourceRef(file, loc)),
@@ -247,7 +256,8 @@ object Step {
       Pending,
       Nil,
       Nil,
-      tagList)
+      tagList,
+      message)
   }
   def errorTrails(node: GwenNode): List[List[Step]] = node match {
     case b: Background => b.steps.flatMap(_.errorTrails)
