@@ -146,6 +146,7 @@ Feature: Load Strategies
      Then status 1 should be "passed"
       And status 2 should be "sustained"
       And status 3 should be "sustained"
+      And the json should be "{ "status": "sustained" }": "wrong json"
 
   Scenario: Eager, lazy and ephemeral system process dates
     Given date 1a is "0"
